--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 body {
-    background-color:#FFE17B;
+    background-color:#F7F1E5;
 }
 #titulo {
-    color:#C51605;
+    color:#4C4B16;
     font-size: 50;
     text-align: center;
 }
 .texto {
-    color:#FD8D14;
+    color:4C4B16;
     text-align: justify;
     font-size: 35px;
 }
