--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     background-color:#F2E3DB;
 }
 #titulo {
-    color: #263A29;
+    color: #113946;
     font-size: 50;
     text-align: center;
 }
