--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 body {
-    background-color:#F2E3DB;
+    background-color:#ED7D31;
 }
 #titulo {
-    color: #113946;
+    color: #4F4A45;
     font-size: 50;
     text-align: center;
 }
 .texto {
-    color:#41644A;
+    color:#6C5F5B;
     text-align: justify;
     font-size: 35px;
 }
