--- a/style.css
+++ b/style.css
@@ -11,3 +11,10 @@ body {
     text-align: justify;
     font-size: 35px;
 }
+#imagem{
+    height: 500px;
+    width: 318px;
+    padding: 10px;
+    margin: 13px;
+    border: outset #F99417;
+}
