--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     text-align: justify;
     font-size: 35px;
 }
-#imagem {
+#imagem1 {
     height: 500px;
     width: 318px;
     padding: 10px;
