--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image:linear-gradient(#490bf2;#0000)
+    background-image:linear-gradient(#1a07f0f3; #0f07f095);
 }
 #titulo {
     color: #F99417;
