--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     background-image:linear-gradient(#1a07f0cb, rgba(240, 155, 7, 0.584));
+    font-family: sans-serif;
 }
 #titulo {
     color: #F99417;
