--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 }
 
 header {
-    padding: 20px;
-    color: #0E2261;
-    border-bottom: 5px solid white;
+    padding: 30px;
+    color: #151617;
+    border-bottom: 10px solid white;
 }
