--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-family: sans-serif;
 }
 #titulo {
-    color: #F99417;
+    color: #f5e7d5;
     font-size: 70px;
     text-align: center;
 }
