--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-family: sans-serif;
 }
 #titulo {
-    color: white;
+    color: black;
     font-size: 70px;
     text-align: center;
 }
